monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4090/A4090b.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4090;

grammar A4090b extends de.monticore.common.TestTypes {

  B = (who:Name | who:"Tom")*;

}
